Reduce authority requirement
1.Reduce authority requirement
2.Renamed files

--- a/qt-dicebot/qt-dicebot.vcxproj.filters
+++ b/qt-dicebot/qt-dicebot.vcxproj.filters
@@ -49,6 +49,6 @@
     <Library Include="CQP.lib" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="com.gmail.dynilath.qtdicebot.json" />
+    <None Include="dynilath.cq.dicebot.json" />
   </ItemGroup>
 </Project>
