--- a/qt-dicebot/qt-dicebot.vcxproj
+++ b/qt-dicebot/qt-dicebot.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>qtdicebot</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>com.gmail.dynilath.qtdicebot</ProjectName>
+    <ProjectName>dynilath.cq.dicebot</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -176,7 +176,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="com.gmail.dynilath.qtdicebot.json" />
+    <None Include="dynilath.cq.dicebot.json" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="CQP.lib" />
