--- a/cqdicebot/cqdicebot.vcxproj
+++ b/cqdicebot/cqdicebot.vcxproj
@@ -145,6 +145,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="diceSet.h" />
+    <ClInclude Include="diceStringParser.h" />
     <ClInclude Include="cqp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
