--- a/cqdicebot/cqdicebot.vcxproj.filters
+++ b/cqdicebot/cqdicebot.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="cqp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="diceStringParser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="diceSet.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
