--- a/cqdicebot/cqdicebot.vcxproj.filters
+++ b/cqdicebot/cqdicebot.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="diceSet.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="appmain.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="mystring.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -46,9 +52,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="CQP.lib" />
+    <None Include="dynilath.cq.dicebot.json" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="dynilath.cq.dicebot.json" />
+    <Library Include="CQP.lib">
+      <Filter>头文件</Filter>
+    </Library>
   </ItemGroup>
 </Project>
